# tenthash

./: .gitignore  Cargo.toml  README.md
benches/: hash.rs
docs/: design_rationale.md  specification.md
licenses/: MIT.txt
reference/: README.md
reference/c_little_endian/: Makefile  tenthash.h  test.c
reference/rust/: Cargo.toml
reference/rust/src/: lib.rs
src/: lib.rs
supplemental/benchmarks/: Cargo.toml  README.md  run_benches.sh
supplemental/benchmarks/benches/: hash.rs
supplemental/collision/: Cargo.toml  README.md
supplemental/collision/src/: main.rs
supplemental/optimize_constants/: Cargo.toml  README.md
supplemental/optimize_constants/src/: avalanche_chart.rs  main.rs
supplemental/tiny_mixer/: Cargo.toml  README.md
supplemental/tiny_mixer/src/: main.rs  stats.rs
tenthash-rust/: CHANGELOG.md  Cargo.toml  README.md
tenthash-rust/benches/: hash.rs
tenthash-rust/src/: lib.rs
tenthash-rust/tests/: test_vectors.rs
tests/: test_vectors.rs
