[package]
name = "tenthash"
version = "0.1.0"
edition = "2021"
description = "A strong, simple, non-cryptographic 160-bit hash function."
categories = ["algorithms", "no-std"]
keywords = ["hash", "checksum"]
documentation = "https://docs.rs/tenthash"
repository = "https://github.com/cessen/tenthash"
readme = "README.md"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "hash"
harness = false
