[package]
name = "tenthash"
version = "0.4.0"
edition = "2021"
description = "A robust 160-bit non-cryptographic hash function."
categories = ["algorithms", "no-std"]
keywords = ["hash", "digest", "checksum"]
documentation = "https://docs.rs/tenthash"
repository = "https://github.com/cessen/tenthash/"
readme = "README.md"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "hash"
harness = false
