[package]
name = "tenthash"
version = "0.5.0"
edition = "2021"
description = "A high-quality, non-cryptographic, 160-bit hash function."
categories = ["algorithms", "no-std"]
keywords = ["hash", "digest", "checksum"]
documentation = "https://docs.rs/tenthash"
repository = "https://github.com/cessen/tenthash/tree/main/tenthash-rust"
readme = "README.md"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "hash"
harness = false
