[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
digest = "0.9"
tenthash = { path = "../../tenthash-rust" }
fastmurmur3 = "0.2"
meowhash = "0.3"
blake3 = "1.5"
criterion = "0.5"

[[bench]]
name = "hash"
harness = false
